--- a/q/272425.html
+++ b/q/272425.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>002</td><td>Nekomata</td><td>240412T100240Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272515#272515">alephalp</a></td></tr>
-<tr d-ix="1"><td>012</td><td>PARI/GP</td><td>240412T023256Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272511#272511">alephalp</a></td></tr>
-<tr d-ix="2"><td>012</td><td>Ruby</td><td>240412T054737Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272514#272514">G B</a></td></tr>
-<tr d-ix="3"><td>012</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="0"><td>010</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="1"><td>002</td><td>Nekomata</td><td>240412T100240Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272515#272515">alephalp</a></td></tr>
+<tr d-ix="2"><td>012</td><td>PARI/GP</td><td>240412T023256Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272511#272511">alephalp</a></td></tr>
+<tr d-ix="3"><td>012</td><td>Ruby</td><td>240412T054737Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272514#272514">G B</a></td></tr>
 <tr d-ix="4"><td>006</td><td>Combinator Logic</td><td>240411T232323Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272509#272509">arutonee</a></td></tr>
 <tr d-ix="5"><td>014</td><td>Lambda Calculus with Church Numerals</td><td>240411T231037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272508#272508">arutonee</a></td></tr>
 <tr d-ix="6"><td>013</td><td>PowerShell Core</td><td>240411T213246Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272503#272503">Julian</a></td></tr>
@@ -66,7 +66,18 @@
 <tr d-ix="37"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="38"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 2 bytes</h1>
+<div id="pu0" class="pu"><h1>TI-BASIC, <s>13</s> <s>12</s> 10 bytes</h1>
+<ul>
+<li>Removed one byte thanks to <a href="https://codegolf.stackexchange.com/users/94076/kai-burghardt">@KaiBurghardt</a>.</li>
+<li>Removed two bytes by not specifying the increment (which is an optional argument)</li>
+</ul>
+<pre><code>seq(X&lt;Ans,X,0,Ans
+</code></pre>
+<p>This creates a list with the correct number of 1's and 0's. The byte count is subtracting any bytes that are present in an empty program. To find the byte count, I looked at the memory stats on the calculator. See <a href="https://codegolf.meta.stackexchange.com/questions/1541/how-to-score-ti-basic">how to score TI-BASIC</a> for more information.</p>
+<p>The input is in the form of the <code>Ans</code> variable, which needs to be set before running the program. Here is an example of input and output on the TI-84 Plus CE:</p>
+<p><a href="https://i.stack.imgur.com/fSqth.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/fSqth.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 2 bytes</h1>
 <pre><code>Ħ¬
 </code></pre>
 <p><a href="https://staging.ato.pxeger.com/run?1=m70iLzU7PzexJHHBgqWlJWm6FkuOLDu0ZklxUnIxVGDBQlMIAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -78,7 +89,7 @@
             [0,0,0,0,0,1] -&gt; [1,1,1,1,1,0]
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 12 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 12 bytes</h1>
 <pre><code>n-&gt;10^n\9*10
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWa_J07QwN4vJiLLUMDSBCN7UTCwpyKjXyFHTtFAqKMvNKgEwlEEdJIU0jT1NTRyHaQEfBSEfBNFYTomXBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -90,19 +101,11 @@
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWWwqKMvNKNAwN4jLzCkpLYiy1DA00IVJQFQsWmkIYAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>A full program.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 12 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 12 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{?1*n+?0}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6v2t5QK0/b3qD2f0FpSbFCWrRp7H8A" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1>TI-BASIC, <s>13</s> 12 bytes</h1>
-<p>Thanks to <a href="https://codegolf.stackexchange.com/users/94076/kai-burghardt">@KaiBurghardt</a> for reducing by one byte.</p>
-<pre><code>seq(X&lt;Ans,X,0,Ans,1
-</code></pre>
-<p>This creates a list with the correct number of 1's and 0's. The byte count is subtracting any bytes that are present in an empty program. To find the byte count, I looked at the memory stats on the calculator. See <a href="https://codegolf.meta.stackexchange.com/questions/1541/how-to-score-ti-basic">how to score TI-BASIC</a> for more information.</p>
-<p>The input is in the form of the <code>Ans</code> variable, which needs to be set before running the program. Here is an example of input and output on the TI-84 Plus CE:</p>
-<p><a href="https://i.stack.imgur.com/fSqth.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/fSqth.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu4" class="pu"><h1>Combinator Logic, 6 bytes</h1>
 <pre><code>V(V1)0
