--- a/q/230438.html
+++ b/q/230438.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Uiua</td><td>240411T224045Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272504#272504">noodle m</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Uiua</td><td>240411T224045Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272504#272504">noodle m</a></td></tr>
 <tr d-ix="1"><td>079</td><td>YASEPL</td><td>240405T161347Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272360#272360">madeforl</a></td></tr>
 <tr d-ix="2"><td>028</td><td>Easyfuck</td><td>240330T181757Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/272203#272203">Quadrupl</a></td></tr>
 <tr d-ix="3"><td>052</td><td>Uiua</td><td>231018T064754Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/266073#266073">Matthew </a></td></tr>
@@ -65,10 +65,10 @@
 <tr d-ix="36"><td>245</td><td>HTML</td><td>210626T161502Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230557#230557">user</a></td></tr>
 <tr d-ix="37"><td>164</td><td>TikZ</td><td>210626T160602Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230556#230556">Wheat Wi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 34 bytes</h1>
-<pre><code>/⊂≡(↯34↯300)÷2°⋯↯6_3_2⋯35972489602
+<div id="pu0" class="pu"><h1>Uiua, <s>34</s> 33 bytes</h1>
+<pre><code>/⊂≡↯34≡↯300÷2°⋯↯6_3_2⋯35972489602
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_3__L-KKguKJoSjihq8zNOKGrzMwMCnDtzLCsOKLr-KGrzZfM18y4ouvMzU5NzI0ODk2MDIK" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="https://uiua.org/pad?src=0_10_3__L-KKguKJoeKGrzM04omh4oavMzAww7cywrDii6_ihq82XzNfMuKLrzM1OTcyNDg5NjAyCg==" rel="nofollow noreferrer">Try it!</a></p>
 <p>I noticed that the existing Uiua solution used a lot of bytes storing the RGB values of the 6 colors, so I decided to compress those, which is the main reason this is shorter. I chose a color palette that uses the digits 0, 1, and 2 to make the colors:</p>
 <pre><code>       red        orange       yellow     green      blue       purple
 color  [2 0 0]    [2 1 0]      [2 2 0]    [0 2 0]    [0 0 2]    [1 0 2]
@@ -419,7 +419,7 @@ v-&gt;                       // Method with empty unused parameter and Frame ret
 <pre class="lang-cpp prettyprint-override"><code>#define p(s)puts(&quot;\e[&quot;#s&quot;m█&quot;);
 main(){p(91)p(31)p(93)p(32)p(34)p(35)}
 </code></pre>
-<p><a href="https://godbolt.org/z/Tj1bbvece" rel="nofollow noreferrer">Try it on godbolt</a></p>
+<p><a href="https://godbolt.org/z/Tj1bbvece" rel="noreferrer">Try it on godbolt</a></p>
 <p>I added the the <code>\e[</code> and <code>m</code> to the <code>p</code> macro because it was used 6 times in each macro invocation. Also the <code>\e[0m</code> (which resets the color) can be removed because the color is overwritten again before each <code>puts</code>.</p>
 <p>If there was a way to make the <code>91</code> and <code>93</code> start with a <code>3</code>, then it might save a few bytes by being able to remove the <code>3</code> from the 30s.</p>
 <p>I'm new to codegolf, so I'm sure if this is 69 or more bytes (because of the <code>█</code> character).</p>
