--- a/q/188988.html
+++ b/q/188988.html
@@ -274,6 +274,16 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, 26 bytes</h1>
 <pre><code>=1'=l®1=i`1!m¥i,1~~!i+}2,l
 </code></pre>
+<p>explanation</p>
+<pre><code>=1'=l®1=i`1!m¥i,1~~!i+}2,l      packed
+=1'                             var1 = input string
+   =l®1                         L = length of input string (var1)
+       =i                       increment variable
+         `1        !i }2,l      while I &lt; L ...
+           !m¥i,1                   get character from input string at index I
+                 ~~                 write it twice
+                     +              add 1 to I and check loop.   
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Uiua, 4 bytes</h1>
 <pre><code>♭⍉⊟.
