--- a/q/219096.html
+++ b/q/219096.html
@@ -26,21 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>APLNARS</td><td>240111T141237Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/269146#269146">Rosario</a></td></tr>
-<tr d-ix="1"><td>055</td><td>R</td><td>210323T165623Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/221153#221153">Giuseppe</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>C gcc lm</td><td>210217T105957Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219229#219229">ErikF</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>Wolfram Language Mathematica</td><td>210216T011408Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219108#219108">att</a></td></tr>
-<tr d-ix="4"><td>nan</td><td>JavaScript</td><td>210216T094112Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219135#219135">user1006</a></td></tr>
-<tr d-ix="5"><td>nan</td><td>05AB1E</td><td>210216T083426Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219130#219130">Kevin Cr</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>J</td><td>210216T003434Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219105#219105">Jonah</a></td></tr>
-<tr d-ix="7"><td>nan</td><td>Charcoal</td><td>210216T004910Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219106#219106">Neil</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>Factor</td><td>210216T003400Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219104#219104">Bubbler</a></td></tr>
-<tr d-ix="9"><td>nan</td><td>APL Dyalog Unicode</td><td>210216T001312Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219103#219103">user</a></td></tr>
-<tr d-ix="10"><td>nan</td><td>SageMath</td><td>210216T000034Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219101#219101">Noodle9</a></td></tr>
-<tr d-ix="11"><td>nan</td><td>Scala</td><td>210215T233601Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219100#219100">user</a></td></tr>
-<tr d-ix="12"><td>nan</td><td>Jelly</td><td>210215T223915Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219097#219097">caird co</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>JavaScript Node.js</td><td>240412T170221Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/272521#272521">2pichar</a></td></tr>
+<tr d-ix="1"><td>014</td><td>APLNARS</td><td>240111T141237Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/269146#269146">Rosario</a></td></tr>
+<tr d-ix="2"><td>055</td><td>R</td><td>210323T165623Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/221153#221153">Giuseppe</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>C gcc lm</td><td>210217T105957Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219229#219229">ErikF</a></td></tr>
+<tr d-ix="4"><td>nan</td><td>Wolfram Language Mathematica</td><td>210216T011408Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219108#219108">att</a></td></tr>
+<tr d-ix="5"><td>nan</td><td>JavaScript</td><td>210216T094112Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219135#219135">user1006</a></td></tr>
+<tr d-ix="6"><td>nan</td><td>05AB1E</td><td>210216T083426Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219130#219130">Kevin Cr</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>J</td><td>210216T003434Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219105#219105">Jonah</a></td></tr>
+<tr d-ix="8"><td>nan</td><td>Charcoal</td><td>210216T004910Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219106#219106">Neil</a></td></tr>
+<tr d-ix="9"><td>nan</td><td>Factor</td><td>210216T003400Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219104#219104">Bubbler</a></td></tr>
+<tr d-ix="10"><td>nan</td><td>APL Dyalog Unicode</td><td>210216T001312Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219103#219103">user</a></td></tr>
+<tr d-ix="11"><td>nan</td><td>SageMath</td><td>210216T000034Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219101#219101">Noodle9</a></td></tr>
+<tr d-ix="12"><td>nan</td><td>Scala</td><td>210215T233601Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219100#219100">user</a></td></tr>
+<tr d-ix="13"><td>nan</td><td>Jelly</td><td>210215T223915Z</td><td><a href="https://codegolf.stackexchange.com/questions/219096/definite-integral-of-polynomial-functions/219097#219097">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL(NARS), 14 chars</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <span class="math-container">\$\frac{30}{70}\approx0.4286\$</span></h1>
+<pre class="lang-javascript prettyprint-override"><code>I=b=&gt;c=&gt;(F=x=&gt;c.reduce((s,e,i)=&gt;s+(e/(i+1)*x**(i+1)),0))(b[1])-F(b[0])
+</code></pre>
+<p><a href="https://tio.run/##HcYxDoAgDADA77QIKg8oI4lvMAyIHXBQA2r8fSVOd1t8Yk0ln5fZj5VFJlrIJXLg6W3pC693YoCqWWckVzvgAXJnUb1K/UE9IsIy24DGN8eAIh8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Takes coefficients in ascending order (<span class="math-container">\$k_0,\dots,k_n\$</span> for <span class="math-container">\$x^0,\dots,x^n\$</span>)</p>
+</div>
+<div id="pu1" class="pu"><h1>APL(NARS), 14 chars</h1>
 <pre><code>a←⎕⋄-/{⍵⊥a}∫¨⎕
 </code></pre>
 <p>For the input of polynom the list</p>
@@ -56,21 +63,21 @@
 108.6666667 
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 55 bytes, score: <span class="math-container">\$\frac{30}{55}=0.\overline{54}\$</span></h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 55 bytes, score: <span class="math-container">\$\frac{30}{55}=0.\overline{54}\$</span></h1>
 
 <pre class="lang-r prettyprint-override"><code>function(b,k)diff(outer(b,a&lt;-rev(seq(!k)),&quot;^&quot;)%*%(k/a))
 </code></pre>
 <p><a href="https://tio.run/##DchBCoAgEADAr5Qg7MZKYEUX3xKYuSCCkmXfN48zpfFg1NC4JveGnOCkiFdghlxfXzqtUcV/8PgbxohI4hAoJwlxtoiNwYGmBcnBShtp2nv@" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 <p>If we could take the coefficients in ascending order of degree, this would be 5 bytes shorter and get a score of <span class="math-container">\$0.6\$</span> instead, by removing the <code>rev()</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a> (<code>-lm</code>), score: <span class="math-container">\$\frac{30}{90}= 0.\bar3\$</span></h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a> (<code>-lm</code>), score: <span class="math-container">\$\frac{30}{90}= 0.\bar3\$</span></h1>
 <p>Sums the bounds for each term in descending order. Due to quirks with <code>-O0</code>, I was able to write this function without the usual return or explicit value assignment at the end of the function.</p>
 
 <pre class="lang-c prettyprint-override"><code>double f(b,t,n,i,j)int*b,*t;{for(double s=i=0;j=n-i;)s+=t[i++]*(pow(b[1],j)-pow(*b,j))/j;}
 </code></pre>
 <p><a href="https://tio.run/##pVHLTsMwELz7K1ZBSHayAfoSB5N@QcWNU5QDceLiKLWr2qaHyL9OcNpSKq7Il53RzD7GIt8KMY6N8XXfgqQ1OtSosGNKu7TG1PFBmgO9CGyhiifeFTpXnNmscKXKsiqle3OkdTmroi@f6ujsGHvseBjvlBa9b1p4sa5R5uFjTYh1By8cSK8FDAQgzoK0Nl43lv9AYVopr1D7HSeBEzKB3bvS9NOohp3ct91ca50tq2LiAQagUV9WbJjjIuAVLXGFc3yOzBIC/pEucHUjneE/XuyzmP1OeH3bbCBEEPkYLInVlK0rTltzcPn6EgK4LEPYe2dpkrDzmQD7Q1xK0uReJhj/6irHyXnO61TGsBibkgskjF9C9u9bO@b9bsyP3w" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>30/32=0.9375</s> <span class="math-container">\$\frac{30}{31}\approx0.9677\$</span></h1>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>30/32=0.9375</s> <span class="math-container">\$\frac{30}{31}\approx0.9677\$</span></h1>
 <pre><code>c(a=0;c^++a.{-1,1}/a&amp;/@#).#&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7P/n9pIUaibYG1slx2tqJetW6hjqGtfqJavoOypp6ymr/A4oy80qi/RzSoquNdIxrY6OrzXWMdEx1TGpjY/8DAA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -84,7 +91,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X9lIV1nNwSG4NDc6U19bO1HZKC5RpzpTJ9HWwFq5Nlbtf0BRZl5JtJ9DWnS1uY6RjqmOSa1OtZGOcW1s7H8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript, score: <span class="math-container">\$\frac{30}{71}\approx 0.42\$</span></h1>
+<div id="pu5" class="pu"><h1>JavaScript, score: <span class="math-container">\$\frac{30}{71}\approx 0.42\$</span></h1>
 <pre class="lang-js prettyprint-override"><code>n=&gt;k=&gt;(x=y=&gt;k.reduce((a,b,c)=&gt;a+b*y**(z=k.length-c)/z,0))(n[1])-x(n[0])
 </code></pre>
 <p>Demonstration:</p>
@@ -101,7 +108,7 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
 <h2>How it works</h2>
 <p>Constructs a function dynamically which calls reduce on the coefficients array. Then invokes it on both bounds and takes the difference.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <span class="math-container">\$\frac{30}{8} = 3.75\$</span></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <span class="math-container">\$\frac{30}{8} = 3.75\$</span></h1>
 <pre><code>āR/0ªIβÆ
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/219106/52210"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote him as well!</p>
@@ -118,7 +125,7 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
           # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <span class="math-container">\$\frac{30}{12}\approx2.5\$</span></h1>
+<div id="pu7" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <span class="math-container">\$\frac{30}{12}\approx2.5\$</span></h1>
 <pre><code>[:-/[-p..p.[
 </code></pre>
 <p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/o6109aN1C/T0CvSi/2typSZn5CsYKRgrpCmYA2lTBZP/AA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
@@ -130,7 +137,7 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
 <li><code>-/</code> And subtract negative ending bound answer from negative starting  bound answer.</li>
 </ul>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <span class="math-container">\$ \frac {30} {20} = 1.5 \$</span></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <span class="math-container">\$ \frac {30} {20} = 1.5 \$</span></h1>
 <pre><code>ＵＭθ∕ι⁻Ｌθκ⊞θ⁰Ｉ⁻↨θζ↨θη
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/983scA5Pzc3MS9Fo1BHwSWzLDMlVSNTR8E3M6@0WMMnNS@9JEOjUFNHIVtTU9OaK6C0OAOk0ADELsrMK9FwTiwu0YCodkosTgVJVgGVw9gZmiB9//9HR5voKJjqKBjpKJjHginj2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -144,7 +151,7 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
 </code></pre>
 <p>Calculate the value at each bound and take the difference.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, <span class="math-container">\$\frac{30}{56}\approx0.5357\$</span></h1>
+<div id="pu9" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, <span class="math-container">\$\frac{30}{56}\approx0.5357\$</span></h1>
 <pre><code>[ [ 1 + 3dup nip v^n first2 - swap / * ] map-index sum ]
 </code></pre>
 <p><a href="https://tio.run/##HY2xDoIwGAZ3nuKbNWAEjQk@AGFhMU4Ek6b8hMZS69@CGsKzV3S5G264Tkj/4HC9lFWR405sSGMQvv8jmeiXHSyT9x/Lyng4eo5kJDmco7LK4SQLL/toRoYUC2acVh9xwBJq1Nhji6wdLYyymG4GnWLnU8RwL2GxwwbNerOxMi294cYBTZBCaySQmgSHLw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -155,14 +162,14 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
 </code></pre>
 <p><a href="https://tio.run/##HY3BCoJAGAbvPsV3LjTSIjDoGl68RCcxWNbfXFrX7d/VCvHZzboMA3OYWkjf8Xy9ZPk5xYPYkEYrfPNHNNAvO1gm7z@WlfFw9OzJSHI4BlmewkkWXjbBiBgJJozYYb/4AdNcgGkgdoQCW6yRVL2FURbDzaBW7HyMEO4lLDZYoVyuNlSmojdc38LQHadad8KjnKXQGhGkJsHzFw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <span class="math-container">\$\frac{30}{20}=1.5\$</span></h1>
+<div id="pu10" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <span class="math-container">\$\frac{30}{20}=1.5\$</span></h1>
 
 <pre class="lang-apl prettyprint-override"><code>{-/⌽⊥∘(0,⍨⍵÷⌽⍳≢⍵)¨⍺}
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT///P@1R24RqXf1HPXsfdS191DFDw0DnUe@KR71bD28HifVuftS5CMjTPAQU21X7/7@RgrFCmoKJgqmCkYI5AA" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
 <p>Takes the bounds on the left and the coefficients on the right. This is a great place to use APL's ⊥, which can evaluate polynomials (although appending a zero is necessary because we want to use n+1 and not n).</p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://doc.sagemath.org/" rel="nofollow noreferrer">SageMath</a>, <span class="math-container">\$\frac{30}{67}\approx 0.44776\$</span></h1>
+<div id="pu11" class="pu"><h1><a href="https://doc.sagemath.org/" rel="nofollow noreferrer">SageMath</a>, <span class="math-container">\$\frac{30}{67}\approx 0.44776\$</span></h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda c,b:RR(integrate(sum(a*x**e for e,a in enumerate(c)),[x]+b))
 </code></pre>
@@ -171,13 +178,13 @@ console.log(f([3,5])(new Array(31).fill(1) /*shortcut*/));</code></pre>
 <p>Can surely work for much higher degrees of a polynomial but got tired waiting for it to finish <span class="math-container">\$10000\$</span>.<br />
 Works quite quickly for degree of <span class="math-container">\$3000\$</span>.</p>
 </div>
-<div id="pu11" class="pu"><h1>Scala, <span class="math-container">\$\frac{30}{88}\approx0.3409\$</span></h1>
+<div id="pu12" class="pu"><h1>Scala, <span class="math-container">\$\frac{30}{88}\approx0.3409\$</span></h1>
 <pre class="lang-scala prettyprint-override"><code>p=&gt;_.:\(.0)((x,r)=&gt;p.reverse.zipWithIndex.map{case(k,n)=&gt;k*math.pow(x,n+1)/(n+1)}.sum-r)
 </code></pre>
 <p><a href="https://scastie.scala-lang.org/3y7Vl7MIQQqmhLmqAR1wWw" rel="nofollow noreferrer">Try it in Scastie</a></p>
 <p>The question's IO format actually works out quiet well here (although I could save 8 bytes by taking the coefficients in reverse to avoid <code>.reverse</code>).</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, <span class="math-container">\$\frac {30} 7 = 4.29\$</span></h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, <span class="math-container">\$\frac {30} 7 = 4.29\$</span></h1>
 <pre><code>÷J$ŻUḅI
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///wdi@Vo7tDH@5o9fz//7@5jpGOqY7JfyMdYwA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
