--- a/q/237206.html
+++ b/q/237206.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>JavaScript Node.js</td><td>240412T050323Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/272513#272513">2pichar</a></td></tr>
+<tr d-ix="0"><td>062</td><td>JavaScript Node.js</td><td>240412T050323Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/272513#272513">2pichar</a></td></tr>
 <tr d-ix="1"><td>034</td><td>Wolfram Language Mathematica</td><td>211113T065523Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237258#237258">att</a></td></tr>
 <tr d-ix="2"><td>084</td><td>PowerShell Core</td><td>240411T010343Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/272486#272486">Julian</a></td></tr>
 <tr d-ix="3"><td>032</td><td>Pip x</td><td>211112T153106Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237229#237229">DLosc</a></td></tr>
@@ -47,10 +47,10 @@
 <tr d-ix="18"><td>045</td><td>JavaScript ES6</td><td>211112T101054Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237214#237214">Arnauld</a></td></tr>
 <tr d-ix="19"><td>059</td><td>Python 2</td><td>211112T094219Z</td><td><a href="https://codegolf.stackexchange.com/questions/237206/floating-point-indexof/237211#237211">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>I=A=&gt;t=&gt;(b=A.findIndex(e=&gt;e&gt;t))-1+(t-A[b-1])/(A[b]-A[b-1])
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 62 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>I=A=&gt;t=&gt;(b=A.findIndex(e=&gt;e&gt;=t))-1+(t-A[b-1])/(A[b]-A[b-1])||0
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN608bR1t7Ups7TSSbB310jLzUjzzUlIrNFJt7VLtSjQ1dQ21NUp0HaOTdA1jNfU1gIxYGA9qgpujrVewv59eQWJRcapGQVF-cmpxsV5iUXpZtFGsJleJrTaKmHEsV3J-XnF-TqpeTn66hqeGo6YG0B5riGnropWijUx0TIxilXSMDWKhrgQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://tio.run/##bYy9DsIgFEZ3noLxEqEWf2KXS8LIMzQMbUHTpuEaS4xD3x1Z3Fy@nHOGbxnewza95mdWiUIsxaFFk9HAiLa5zym4FOIHIppoMAuh9AGysv2otBdHqOB/tu9tsRx5r@VZXuVNdlK3Up88y7V2jOpe2ERpozU2Kz3AgRVQT/9FjshJlC8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>44</s> <s>36</s> <s>35</s> 34 bytes</h1>
 <pre><code>Tr@Clip[Ramp[#2-#]/({Set@@#,}-#)]&amp;
