--- a/q/272523.html
+++ b/q/272523.html
@@ -26,17 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>Python 3</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
+<tr d-ix="0"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
+<tr d-ix="1"><td>037</td><td>Python 3</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 31 bytes.</h1>
+<p>Prompts for lower then higher integer. Index origin=0</p>
+<pre><code>⌈/+⌿~∨⍀⊖((⌈2⍟n)⍴2)⊤m+⍳(n←⎕)-m←⎕
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3t/6OeDn3tRz376x51rHjU2/Coa5qGBlDM6FHv/DzNR71bjDQfdS3J1X7Uu1kjD6gLqFtTNxfC@A80gOt/GpehOZeRIVcal5ERl7E5AA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a,b:-(a&gt;b)or-~f(-~a//2,b//2)
 </code></pre>
 <p><a href="https://tio.run/##ZZDPTsMwDMbP9CnCLrOFy3Ar1i6ivAYHxCHRlhJpc6ush3HZq5ckqzQkLr/P8Z/PVsaf6XuQuh3DPLvuaE52b5Qhq0sw7xaHUF4dlFez2VRkI3Du/3adzAWOBwHrBQSxvMfP4TwFP8L6ZY2o3BCUKC8qGOkPEEefGLEoUj69MNU@gRuqGAmqiurXqExtZJ3Z0C6yzWRqInfEqZm3xFv80sXDGLxM4LIhqZt2XZ91WWbuRzBxg7rIt9n/aeWdMm@dVUb2i9fj4qVvi1YfYZBeryh9Bc6/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
 <pre><code>ꜝRƛ2M}G
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLqnJ1SxpsyTX1HIiwiIiwiMjJcbjMyIiwiMy40LjIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -49,7 +56,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1>Uiua 0.11.0, 11 bytes</h1>
+<div id="pu3" class="pu"><h1>Uiua 0.11.0, 11 bytes</h1>
 <pre><code>/↥⊗1⋯+⇡+1-,
 </code></pre>
 <p>Takes a,b with b on top of stack</p>
