--- a/q/272523.html
+++ b/q/272523.html
@@ -26,22 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
-<tr d-ix="1"><td>037</td><td>Python 3</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
+<tr d-ix="0"><td>028</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
+<tr d-ix="1"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
 <tr d-ix="2"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
 <tr d-ix="3"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, 31 bytes.</h1>
-<p>Prompts for lower then higher integer. Index origin=0</p>
-<pre><code>⌈/+⌿~∨⍀⊖((⌈2⍟n)⍴2)⊤m+⍳(n←⎕)-m←⎕
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 28 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda a,b:len(bin(a-1^b))-3
 </code></pre>
-<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3t/6OeDn3tRz376x51rHjU2/Coa5qGBlDM6FHv/DzNR71bjDQfdS3J1X7Uu1kjD6gLqFtTNxfC@A80gOt/GpehOZeRIVcal5ERl7E5AA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
+<p><a href="https://tio.run/##ZVDLTsNADDyTrzC9dC1chBPRpCv2OzjwkLxqE1ZqnWjJAb4@7CZBReIyY3vsseXhe/zotWqGOLXudTrLxR8FhLw9n9T4oEZ2/O4Rd9XUuT/yRb7Mb4sm@Rrfx88xhsFsH7aI0PYRFIJCFO1OJo3eMWJR5HrOMGsvhmsqGcmUJVWPiZmahNWMNR0SNjMy1QkPxLmZ98R7fLPFzRCDjqadDQkWdq5b84XXpXI9holrtMV8o/9fhtCCPDkPosfV83b1tMvCzXPstbMbyi/B6Qc" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><strong>37 bytes</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a,b:-(a&gt;b)or-~f(-~a//2,b//2)
 </code></pre>
 <p><a href="https://tio.run/##ZZDPTsMwDMbP9CnCLrOFy3Ar1i6ivAYHxCHRlhJpc6ush3HZq5ckqzQkLr/P8Z/PVsaf6XuQuh3DPLvuaE52b5Qhq0sw7xaHUF4dlFez2VRkI3Du/3adzAWOBwHrBQSxvMfP4TwFP8L6ZY2o3BCUKC8qGOkPEEefGLEoUj69MNU@gRuqGAmqiurXqExtZJ3Z0C6yzWRqInfEqZm3xFv80sXDGLxM4LIhqZt2XZ91WWbuRzBxg7rIt9n/aeWdMm@dVUb2i9fj4qVvi1YfYZBeryh9Bc6/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, 31 bytes.</h1>
+<p>Prompts for lower then higher integer. Index origin=0</p>
+<pre><code>⌈/+⌿~∨⍀⊖((⌈2⍟n)⍴2)⊤m+⍳(n←⎕)-m←⎕
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3t/6OeDn3tRz376x51rHjU2/Coa5qGBlDM6FHv/DzNR71bjDQfdS3J1X7Uu1kjD6gLqFtTNxfC@A80gOt/GpehOZeRIVcal5ERl7E5AA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
 <pre><code>ꜝRƛ2M}G
