--- a/q/272425.html
+++ b/q/272425.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>Rust</td><td>240412T123009Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272516#272516">Aryan</a></td></tr>
-<tr d-ix="1"><td>010</td><td>TIBASIC</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="0"><td>010</td><td>TIBASIC TI84+CE</td><td>240411T182720Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272500#272500">Sylveste</a></td></tr>
+<tr d-ix="1"><td>021</td><td>Rust</td><td>240412T123009Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272516#272516">Aryan</a></td></tr>
 <tr d-ix="2"><td>002</td><td>Nekomata</td><td>240412T100240Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272515#272515">alephalp</a></td></tr>
 <tr d-ix="3"><td>012</td><td>PARI/GP</td><td>240412T023256Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272511#272511">alephalp</a></td></tr>
 <tr d-ix="4"><td>012</td><td>Ruby</td><td>240412T054737Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272514#272514">G B</a></td></tr>
@@ -67,11 +67,7 @@
 <tr d-ix="38"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="39"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Rust, 21 bytes</h1>
-<pre class="lang-rs prettyprint-override"><code>|n|&quot;1&quot;.repeat(n)+&quot;0&quot;;
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1>TI-BASIC, <s>13</s> <s>12</s> 10 bytes</h1>
+<div id="pu0" class="pu"><h1>TI-BASIC (TI-84+CE), <s>13</s> <s>12</s> 10 bytes</h1>
 <ul>
 <li>Removed one byte thanks to <a href="https://codegolf.stackexchange.com/users/94076/kai-burghardt">@KaiBurghardt</a>.</li>
 <li>Removed two bytes by not specifying the increment (which is an optional argument)</li>
@@ -81,6 +77,10 @@
 <p>This creates a list with the correct number of 1's and 0's. The byte count is subtracting any bytes that are present in an empty program. To find the byte count, I looked at the memory stats on the calculator. See <a href="https://codegolf.meta.stackexchange.com/questions/1541/how-to-score-ti-basic">how to score TI-BASIC</a> for more information.</p>
 <p>The input is in the form of the <code>Ans</code> variable, which needs to be set before running the program. Here is an example of input and output on the TI-84 Plus CE:</p>
 <p><a href="https://i.stack.imgur.com/fSqth.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/fSqth.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1>Rust, 21 bytes</h1>
+<pre class="lang-rs prettyprint-override"><code>|n|&quot;1&quot;.repeat(n)+&quot;0&quot;;
+</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 2 bytes</h1>
 <pre><code>Ħ¬
