--- a/q/272523.html
+++ b/q/272523.html
@@ -27,10 +27,11 @@
     <th class="tlink">Link</th>
   </tr>
 <tr d-ix="0"><td>004</td><td>Jelly</td><td>240412T193548Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272529#272529">Jonathan</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
-<tr d-ix="2"><td>028</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
-<tr d-ix="3"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Charcoal</td><td>240412T194016Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272530#272530">Neil</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
+<tr d-ix="3"><td>028</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
+<tr d-ix="4"><td>031</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 4 bytes</h1>
 <pre><code>rọ2Ṁ
@@ -41,11 +42,31 @@
 <pre><code>rọ2Ṁ - Link: positive integer, a; positive integer, b
 r    - {a} inclusive range {b} -&gt; [a..b]
   2  - literal two
- ọ   - {[a..b]} divisibility count {2} (vectorises)
+ ọ   - {[a..b]} divisibility-by count {2} (vectorises)
    Ṁ - maximum
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.11.0</a>, 11 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Mar-9" rel="nofollow noreferrer" title="SBCS for Uiua 0.10.0">SBCS</a></sup></h1>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
+<pre><code>Ｉ⌈Ｅ…·ＮＮ⌕⮌⍘ι²1
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwzexIjO3NBdIF2h45iXnlBZnlqUGJealpwK5BaUlfqW5SalFGpo6CihcIN8tMy9FIyi1LLWoOFXDKbE4NbgEaGy6RqaOghFIXslQSRMErP//NzTnMjL8r1uWAwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>   …·           Inclusive range from
+     Ｎ          First input as a number to
+      Ｎ         Second input as a number
+  Ｅ             Map over values
+          ι     Current value
+         ⍘      Converted to base
+           ²    Literal integer `2`
+        ⮌       Reversed
+       ⌕        Find index of
+            1   Literal string `1`
+ ⌈              Take the maximum
+Ｉ               Cast to string
+                Implicitly print
+</code></pre>
+<p>Charcoal doesn't have a bitwise XOR operator otherwise porting @xnor's solution would be only 9 bytes.</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.11.0</a>, 11 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Mar-9" rel="nofollow noreferrer" title="SBCS for Uiua 0.10.0">SBCS</a></sup></h1>
 <pre><code>/↥⊗1⋯+⇡+1-,
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAgKAogICsxLSwgIyBwdXRzIGItYSsxIGFuZCBhIG9uIHN0YWNrCiAg4oehICAgICMgcmFuZ2UgWzAgLi4uIGItYSsxXQogICsgICAgIyBhZGQgYSB0byBnZXQgW2EgLi4uIGJdCiAg4ouvICAgICMgZ2V0IGxpdHRsZS1lbmRpYW4gYmluYXJ5IG9mIGVhY2gKICDiipcxICAgIyBnZXQgaW5kZXggb2YgZmlyc3QgMSBpbiBlYWNoCiAgL-KGpSAgICMgbWF4aW11bQopCgpGIDIxIDE3Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
@@ -59,7 +80,7 @@ r    - {a} inclusive range {b} -&gt; [a..b]
 /↥   # maximum
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 28 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 28 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b:len(bin(a-1^b))-3
 </code></pre>
@@ -71,13 +92,13 @@ r    - {a} inclusive range {b} -&gt; [a..b]
 </code></pre>
 <p><a href="https://tio.run/##ZZDPTsMwDMbP9CnCLrOFy3Ar1i6ivAYHxCHRlhJpc6ush3HZq5ckqzQkLr/P8Z/PVsaf6XuQuh3DPLvuaE52b5Qhq0sw7xaHUF4dlFez2VRkI3Du/3adzAWOBwHrBQSxvMfP4TwFP8L6ZY2o3BCUKC8qGOkPEEefGLEoUj69MNU@gRuqGAmqiurXqExtZJ3Z0C6yzWRqInfEqZm3xFv80sXDGLxM4LIhqZt2XZ91WWbuRzBxg7rIt9n/aeWdMm@dVUb2i9fj4qVvi1YfYZBeryh9Bc6/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 31 bytes.</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 31 bytes.</h1>
 <p>Prompts for lower then higher integer. Index origin=0</p>
 <pre><code>⌈/+⌿~∨⍀⊖((⌈2⍟n)⍴2)⊤m+⍳(n←⎕)-m←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3t/6OeDn3tRz376x51rHjU2/Coa5qGBlDM6FHv/DzNR71bjDQfdS3J1X7Uu1kjD6gLqFtTNxfC@A80gOt/GpehOZeRIVcal5ERl7E5AA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
 <pre><code>ꜝRƛ2M}G
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLqnJ1SxpsyTX1HIiwiIiwiMjJcbjMyIiwiMy40LjIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
