--- a/q/272523.html
+++ b/q/272523.html
@@ -45,6 +45,11 @@ r    - {a} inclusive range {b} -&gt; [a..b]
  ọ   - {[a..b]} divisibility-by count {2} (vectorises)
    Ṁ - maximum
 </code></pre>
+<hr />
+<p><a href="https://codegolf.stackexchange.com/a/272526/53748">Xnor's solution</a> would be five bytes (and would require <span class="math-container">\$a \le b\$</span>, which is most likely an intended, allowed restriction), and is certainly more efficient:</p>
+<pre><code>’^BL’
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8//9Rw8w4Jx8g@d/E4tDqw8sP7T45/fC@hCj3/wA" rel="nofollow noreferrer">TIO</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
 <pre><code>Ｉ⌈Ｅ…·ＮＮ⌕⮌⍘ι²1
